k8s/uat/cart-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service-blue
  namespace: uat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart
      version: blue
  template:
    metadata:
      labels:
        app: cart
        version: blue
    spec:
      containers:
      - name: cart
        image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/cart-service:${IMAGE_TAG}
        ports:
        - containerPort: 3002
