k8s/uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service-blue
  namespace: uat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart
      version: blue
  template:
    metadata:
      labels:
        app: cart
        version: blue
    spec:
      containers:
      - name: cart
        image: 677005902461.dkr.ecr.us-east-1.amazonaws.com/cart-service:RC-1
        ports:
        - containerPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service-blue
  namespace: uat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: blue
  template:
    metadata:
      labels:
        app: frontend
        version: blue
    spec:
      containers:
      - name: frontend
        image: 677005902461.dkr.ecr.us-east-1.amazonaws.com/frontend:RC-1
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-blue
  namespace: uat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
      version: blue
  template:
    metadata:
      labels:
        app: order
        version: blue
    spec:
      containers:
      - name: order
        image: 677005902461.dkr.ecr.us-east-1.amazonaws.com/order-service:RC-1
        ports:
        - containerPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-blue
  namespace: uat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
      version: blue
  template:
    metadata:
      labels:
        app: product
        version: blue
    spec:
      containers:
      - name: product
        image: 677005902461.dkr.ecr.us-east-1.amazonaws.com/product-service:RC-1
        ports:
        - containerPort: 3003
