k8s/uat/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-blue
  namespace: uat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
      version: blue
  template:
    metadata:
      labels:
        app: order
        version: blue
    spec:
      containers:
      - name: order
        image: ${AWS_ACCOUNT_ID}.dkr.ecr.{AWS_REGION}.amazonaws.com/order-service:${IMAGE_TAG}
        ports:
        - containerPort: 3001
