k8s/uat/product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-blue
  namespace: uat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
      version: blue
  template:
    metadata:
      labels:
        app: product
        version: blue
    spec:
      containers:
      - name: product
        image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/product-service:${IMAGE_TAG}
        ports:
        - containerPort: 3003
