k8s/uat/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: uat
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: uat
spec:
  selector:
    app: cart-service
  ports:
    - port: 80
      targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: uat
spec:
  selector:
    app: order-service
  ports:
    - port: 80
      targetPort: 3001
---
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: uat
spec:
  selector:
    app: product-service
  ports:
    - port: 80
      targetPort: 3003
